<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/large_36dp"
    android:layout_margin="@dimen/small_10dp"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_item_profile_image"
        android:layout_width="@dimen/large_36dp"
        android:layout_height="@dimen/large_36dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_person"
        app:civ_circle_background_color="@android:color/black" />

    <TextView
        android:id="@+id/user_item_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/small_10dp"
        android:layout_toEndOf="@id/user_item_profile_image"
        android:textAppearance="@android:style/TextAppearance.WindowTitle"
        android:textColor="@android:color/black"
        tools:text="@string/username" />

    <ImageButton
        android:id="@+id/user_item_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/small_10dp"
        android:background="@drawable/ic_cancel"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/cancel"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/user_item_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/small_10dp"
        android:background="@drawable/ic_accept"
        android:layout_toStartOf="@id/user_item_cancel_button"
        android:contentDescription="@string/accept"
        android:visibility="invisible" />


</RelativeLayout>