<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    tools:context=".View.WelcomeActivity">

    <LinearLayout
        android:layout_width="@dimen/view_width_300"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/medium_18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/application_welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="bold|italic" />


        <androidx.slidingpanelayout.widget.SlidingPaneLayout
            android:layout_width="@dimen/view_width_200"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/large_36dp"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="@dimen/view_width_200"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_10dp"
            android:background="@drawable/input_background"
            android:padding="@dimen/medium_18dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="@dimen/view_width_200"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_10dp"
            android:background="@drawable/input_background"
            android:padding="@dimen/medium_18dp"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>